fix: Fix deprecation warning - Switch from URL constructor to URI.create